--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/marcieleadivincula/starter/issues"
   },
-  "homepage": "https://github.com/marcieleadivincula/starter#readme"
+  "homepage": "https://github.com/marcieleadivincula/starter#readme",
+  "keywords": []
 }
